--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,5 @@
 .App {
-  margin:10%;
+  margin:6%;
 }
 
 .App-logo {
@@ -26,7 +26,7 @@
 
 .card-list {
   width:100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   padding:0px;
   display:flex;
   flex-direction:column;
@@ -40,12 +40,21 @@
   color: black;
 }
 
+.root-page {
+  text-align: center;
+  font-size: calc(10px + 4vmin);
+}
+
+/* Method to prevent more than one line found at https://stackoverflow.com/questions/1318108/css-limit-element-to-1-line*/
 .card-li *{
-  height:10vh;
   padding: 0.5em;
   font-size: calc(9px + 1vmin);
   margin: 0.5vh;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis
 }
+
 
 .card-li div{
   width: 100%;
@@ -61,11 +70,37 @@
   transition-timing-function: linear;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.builder_box{
+  border: solid 0.5px #e3e3e3;
+  border-radius: 10px;
+}
+
+.input_item{
+  float: left;
+  width: calc(100% - 24px);
+  border:0px;
+  margin:10px;
+}
+
+.add_task_button{
+  border: solid 0.5px #598BFF;
+  background-color: #D9E4FF;
+}
+
+.create_button{
+  border: solid 0.5px #00D68F;
+  background-color: #CCFCE3;
+}
+
+.cancel_button{
+  border: solid 0.5px #a8a8a8;
+  background-color: #e3e3e3;
+}
+
+.add_task_button, .create_button, .cancel_button{
+  border-radius: 5px;
+  margin:0.2vh;
+}
+.create_button div, .cancel_button div, .add_task_button div{
+  padding: 0.5vh 0.5vh;
 }
